# evolution-game

./: .travis.yml  Brain.cpp  Brain.hpp  Button.cpp  Button.hpp  CMakeLists.txt  Evolution.cpp  Evolution.hpp  Food.hpp  Hexagon.cpp  Hexagon.hpp  Keyboard.cpp  Keyboard.hpp  Map.cpp  Map.hpp  NetworkFunction.hpp  Neuron.hpp  Pixel.cpp  Pixel.hpp  README.md  SunMap.cpp  TrainAlgorithm.cpp  TrainAlgorithm.hpp  console  main.cpp
project/: main.cpp
project/include/: Brain.hpp  Button.hpp  Evolution.hpp  Food.hpp  Hexagon.hpp  Keyboard.hpp  Link.hpp  Map.hpp  NetworkFunction.hpp  Neuron.hpp  NeuronCreator.hpp  Pixel.hpp  TrainAlgorithm.hpp
project/sourses/: Brain.cpp  Evolution.cpp  Evolution.hpp  Hexagon.cpp  Map.cpp  Map.hpp  Neuron.cpp  Pixel.cpp  Pixel.hpp
project/tests/: Brain_tests.cpp  Keyboard_test.cpp  main.cpp
src/: main.cpp
src/classes/: Brain.cpp  Brain.hpp  Button.cpp  Button.hpp  CMakeLists.txt  Evolution.cpp  Evolution.hpp  Food.hpp  Hexagon.cpp  Hexagon.hpp  Link.cpp  Link.hpp  Map.cpp  Map.hpp  NetworkFunction.hpp  Neuron.cpp  Neuron.hpp  Pixel.cpp  Pixel.hpp  StationaryObject.cpp  StationaryObject.hpp  SunMap.hpp  TrainAlgorithm.cpp  TrainAlgorithm.hpp  classes.md  main.cpp
